# cpp-smart-pointers

./: .gitignore
.github/workflows/: build-and-test-UniquePtr.yml
UniquePtr/: CMakeLists.txt  README.md  UniquePtr.hpp
UniquePtr/test/: UniquePtr_test.cpp
